--- a/modulo01/aula05-tdd-project-pt02/package.json
+++ b/modulo01/aula05-tdd-project-pt02/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "chai": "^4.3.7",
     "faker": "^5.1.0",
     "mocha": "^8.4.0",
     "nyc": "^15.1.0",
