--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ coverage
 
 # nyc test coverage
 .nyc_output
+.reify-cache
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
