feat: class 03 module 4

--- a/.gitignore
+++ b/.gitignore
@@ -167,5 +167,6 @@ dist
 .ionide
 
 erikwendeljsexpert.code-workspace
+erickwendel.code-workspace
 
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
