--- a/modulo07/behavioral/01.strategy/package.json
+++ b/modulo07/behavioral/01.strategy/package.json
@@ -12,5 +12,10 @@
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "dependencies": {
+    "knex": "^0.95.4",
+    "mongodb": "^3.6.5",
+    "pg": "^8.5.1"
   }
 }
