--- a/modulo07/behavioral/03.template-method/package.json
+++ b/modulo07/behavioral/03.template-method/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "03.template-method",
+  "name": "03-template-method",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --watch --config ./jest.config.js",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --config ./jest.config.js --watchAll",
     "test:cov": "NODE_OPTIONS=--experimental-vm-modules npx jest --config ./jest.config.js --coverage"
   },
   "keywords": [],
