wip: class 01 module 08

--- a/modulo08/01.my-first-npm-module/myapp/package.json
+++ b/modulo08/01.my-first-npm-module/myapp/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
-    "start": "node --experimental-specifier-resolution=node index.js",
+    "start": "node --experimental-json-modules index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@psobral89/fluentsql": "^1.0.0"
+  }
 }
