--- a/modulo09/04.codegen/aula03/codegen/package.json
+++ b/modulo09/04.codegen/aula03/codegen/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --runInBand --no-cache --watch --config jest.config.mjs ",
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch --config jest.config.mjs ",
     "test:cov": "NODE_OPTIONS=--experimental-vm-modules npx jest --config jest.config.mjs --coverage "
   },
   "keywords": [],
