--- a/modulo09/04.codegen/aula03/codegen/package.json
+++ b/modulo09/04.codegen/aula03/codegen/package.json
@@ -4,10 +4,14 @@
   "description": "",
   "main": "index.js",
   "type": "module",
+  "bin": {
+    "codegen": "./src/index.js"
+  },
   "engines": {
     "node": "16.20.2"
   },
   "scripts": {
+    "start": "NODE_ENV=dev node src/index.js",
     "test": "NODE_OPTIONS=--experimental-vm-modules npx jest --watch --config jest.config.mjs ",
     "test:cov": "NODE_OPTIONS=--experimental-vm-modules npx jest --config jest.config.mjs --coverage "
   },
@@ -16,5 +20,8 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^26.6.3"
+  },
+  "dependencies": {
+    "yargs": "^17.7.2"
   }
 }
