wip: class 08 module 9

--- a/modulo09/04.codegen/aula03/codegen/package.json
+++ b/modulo09/04.codegen/aula03/codegen/package.json
@@ -2,7 +2,7 @@
   "name": "@psobral89/codegen",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
   "type": "module",
   "bin": {
     "codegen": "./src/index.js"
