--- a/modulo10/aula02/package.json
+++ b/modulo10/aula02/package.json
@@ -8,7 +8,8 @@
     "start-server": "mkdir -p logs && node webapi.js",
     "api1": "curl localhost:3000 | tee logs/api1.log",
     "api2": "curl localhost:4000 | tee logs/api2.log",
-    "example01":"node examples/1.concat-streams.pass-throught.js | tee logs/concat-streams.pass-throught.log"
+    "example01":"node examples/1.concat-streams.pass-throught.js | tee logs/concat-streams.pass-throught.log",
+    "example02":"node examples/2.async-streams.js | tee logs/async-streams.log"
   },
   "keywords": [],
   "author": "",
