--- a/modulo10/aula03/package.json
+++ b/modulo10/aula03/package.json
@@ -8,8 +8,7 @@
     "start-server": "mkdir -p logs && node webapi.js",
     "api1": "curl localhost:3000 | tee logs/api1.log",
     "api2": "curl localhost:4000 | tee logs/api2.log",
-    "example01":"node examples/1.concat-streams.pass-throught.js | tee logs/1.concat-streams.pass-throught.log",
-    "example02":"node examples/2.async-streams.js | tee logs/2.async-streams.log"
+    "example01":"node examples/1.concat-streams.async-iterators.js | tee logs/1.concat-streams.async-iterators.log"
   },
   "keywords": [],
   "author": "",
