feat: class 04 module 12

--- a/modulo12/02-memory-leak/02-memleak-events/package.json
+++ b/modulo12/02-memory-leak/02-memleak-events/package.json
@@ -8,7 +8,10 @@
     "start": "CLIMEM=8999 node -r climem index.js",
     "climem": "npx climem 8999",
     "test": "npx autocannon -c 100 -d 30 -p 10 http://localhost:3000",
-    "flame-0x": "npx 0x -- node index.js"
+    "flame-0x": "npx 0x -- node index.js",
+    "clinic-doctor": "npx clinic doctor -- node index.js",
+    "clinic-flame": "npx clinic flame -- node index.js",
+    "clinic-heapprofiler": "npx clinic heapprofiler -- node index.js"
   },
   "keywords": [],
   "author": "",
@@ -16,7 +19,8 @@
   "devDependencies": {
     "0x": "^5.7.0",
     "autocannon": "^7.15.0",
-    "climem": "^2.0.0"
+    "climem": "^2.0.0",
+    "clinic": "^13.0.0"
   },
   "dependencies": {
     "-": "^0.0.1",
