--- a/modulo12/03-cluster-nodejs/package.json
+++ b/modulo12/03-cluster-nodejs/package.json
@@ -2,12 +2,15 @@
   "name": "03-cluster-nodejs",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "autocannon": "^7.15.0"
+  }
 }
