wip: class 05 module 13

--- a/.gitignore
+++ b/.gitignore
@@ -171,5 +171,5 @@ dist
 
 erikwendeljsexpert.code-workspace
 erickwendel.code-workspace
-
+All_Pokemon.csv
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode
