wip: class 05 module 13

--- a/modulo13/01-child-process/02-process-report/package.json
+++ b/modulo13/01-child-process/02-process-report/package.json
@@ -2,7 +2,7 @@
   "name": "02-process-report",
   "version": "1.0.0",
   "main": "index.js",
-  "type":"module",
+  "type": "module",
   "scripts": {
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +10,8 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "csvtojson": "^2.0.10"
+  }
 }
